fix some bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,7 @@ nav ul li a
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 
 .name-box
